name:                dimensional-parsing
version:             0.1.0.0
synopsis:            Parsing features for the dimensional library.
homepage:            https://github.com/dmcclean/dimensional-parsing
license:             BSD3
license-file:        LICENSE
author:              Douglas McClean
maintainer:          douglas.mcclean@gmail.com
-- copyright:           
category:            Math
build-type:          Simple
cabal-version:       >=1.10
tested-with:         GHC == 7.8.4, GHC == 7.10.1, GHC == 7.10.2

description:

    dimensional-parsing provides parsing features for use in conjunction with the
    dimensional library for physical quantities and units.

extra-source-files:  README.md,
                     CHANGELOG.md

source-repository head
  type:     git
  location: https://github.com/dmcclean/dimensional-parsing/

library
  build-depends:       base >=4.7 && <4.9,
                       attoparsec,
                       containers >= 0.5.6,
                       dimensional >= 1.0.1 && <2,
                       exact-pi >= 0.4.1 && < 0.5,
                       parsers >= 0.12.3,
                       scientific >= 0.3.4.3 && < 0.4,
                       text >= 1.2 && < 1.3,
                       unordered-containers >= 0.2.5
  hs-source-dirs:      src
  ghc-options:         -Wall
  default-language:    Haskell2010
  exposed-modules:     Numeric.Units.Dimensional.Parsing.UCUM,
                       Numeric.Units.Dimensional.Parsing.Units
  -- other-modules:
  -- other-extensions:
